# embedded-hal-fuzz

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: adc_dodgy.rs  adc_good.rs  digital_dodgy.rs  digital_good.rs  i2c_dodgy.rs  i2c_good.rs  multiple_io.rs  spi_dodgy.rs  spi_good.rs
src/: adc.rs  delay.rs  digital.rs  error.rs  fuzzed_type.rs  i2c.rs  lib.rs  pwm.rs  serial.rs  shared_data.rs  spi.rs
