[package]
name = "embedded-hal-fuzz"
version = "1.0.0"
edition = "2021"
authors = ["Nathaniel Brough"]
repository = "https://github.com/silvergasp/embedded-hal-fuzz"
description = "Fuzzing backends for embedded_hal"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
embedded-hal = {version = "1.0.0"}
nb = "1.1.0"
thiserror = "1.0.59"

[dev-dependencies]
num-traits = "0.2"
num-derive = "0.4"
libfuzzer-sys = "0.4"

[package.metadata.commits]
defaults = true
